--- a/.gitattributes
+++ b/.gitattributes
@@ -12,8 +12,8 @@
 # Standard to msysgit
 *.doc     diff=astextplain
 *.DOC     diff=astextplain
-*.docx diff=astextplain
-*.DOCX diff=astextplain
+*.docx diff=word
+*.DOCX diff=word
 *.dot  diff=astextplain
 *.DOT  diff=astextplain
 *.pdf  diff=astextplain
